<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="modelDetails"
            type="io.github.joaogouveia89.fipe.network.models.ModelDetails" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modelDetails.ModelDetailsFragment"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/model_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/model_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{modelDetails.model, default=""}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/model_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/model_brand_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/model_brand_label"
            app:layout_constraintTop_toBottomOf="@id/model_name_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/model_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text='@{modelDetails.brand, default=""}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/model_brand_label"
            app:layout_constraintTop_toBottomOf="@id/model_name" />

        <TextView
            android:id="@+id/model_year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/model_year_label"
            app:layout_constraintTop_toBottomOf="@id/model_brand_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/model_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text='@{modelDetails.year, default=""}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/model_year_label"
            app:layout_constraintTop_toBottomOf="@id/model_brand" />

        <TextView
            android:id="@+id/model_fipecode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/model_fipecode_label"
            app:layout_constraintTop_toBottomOf="@id/model_year_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/model_fipecode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text='@{modelDetails.fipeCode, default=""}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/model_fipecode_label"
            app:layout_constraintTop_toBottomOf="@id/model_year" />

        <TextView
            android:id="@+id/model_referencemonth_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/model_referencemonth_label"
            app:layout_constraintTop_toBottomOf="@id/model_fipecode_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/model_referencemonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text='@{modelDetails.referenceMonth, default=""}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/model_referencemonth_label"
            app:layout_constraintTop_toBottomOf="@id/model_fipecode" />

        <TextView
            android:id="@+id/model_fuel_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/model_fuel_label"
            app:layout_constraintTop_toBottomOf="@id/model_referencemonth_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/model_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text='@{modelDetails.fuel, default=""}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/model_fuel_label"
            app:layout_constraintTop_toBottomOf="@id/model_referencemonth" />

        <TextView
            android:id="@+id/model_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/model_value_label"
            app:layout_constraintTop_toBottomOf="@id/model_fuel_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/model_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text='@{modelDetails.value, default=""}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/model_fuel_label"
            app:layout_constraintTop_toBottomOf="@id/model_fuel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>